--- a/css/css.css
+++ b/css/css.css
@@ -280,6 +280,10 @@ a{
     text-decoration: none;
 }
 /* -------------------------------centre------------------------------ */
+.msg {
+    height: 100px !important;
+}
+
 .centre {
     width: 100%;
     height: 100vh;
